# rustubs

./: .rustfmt.toml  Cargo.toml  Dockerfile  Readme.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: workflow.yaml
src/: interrupts.rs  lib.rs  main.rs
src/cga/: README.md  buffer.rs  characters.rs  color.rs  cursor.rs  mod.rs  writer.rs
src/gdt/: mod.rs  tss.rs
src/hardware/: keyboard.rs  mod.rs  timer.rs
src/interrupts/: gate.rs  guard.rs  guardian.rs  handlers.rs  hardware.rs  mod.rs  pic.rs  plugbox.rs  traps.rs
src/interrupts/types/: exception_id.rs  irq_id.rs  mod.rs
src/machine/pit/: cmd.rs  counter.rs  format.rs  mod.rs  mode.rs
src/utils/: ring_buffer.rs
tests/: basic_boot.rs  should_panic.rs  stack_overflow.rs
